--- a/trunk/NEWS
+++ b/trunk/NEWS
@@ -1,6 +1,15 @@
 This file describes changes in recent versions of SLURM. It primarily
 documents those changes that are of interest to users and admins. 
 
+* Changes in SLURM 0.2.9
+========================
+ -- Fixes for reported problems:
+   - Argument to srun `-n' option was taken as octal if preceeded with a `0'.
+ -- New format for Elan hosts config file (/etc/elanhosts. See README)
+ -- Various fixes for managing COMPLETING jobs.
+ -- Support for passing options to squeue via environment variables 
+    (see squeue(1))
+
 * Changes in SLURM 0.2.8
 =========================
  -- Fix for bug in slurmd that could make debug messages appear in job output.
