--- a/trunk/doc/man/man5/slurm.conf.5
+++ b/trunk/doc/man/man5/slurm.conf.5
@@ -118,7 +118,9 @@ The maximum number of jobs SLURM can have in its active database
 at one time. Set the values of \fBMaxJobCount\fR and \fBMinJobAge\fR 
 to insure the slurmctld daemon does not exhaust its memory or other 
 resources. Once this limit is reached, requests to submit additional 
-jobs will fail. The default value is 2000 jobs.
+jobs will fail. The default value is 2000 jobs. This value may not 
+be reset via "scontrol reconfig". It only takes effect upon restart 
+of the slurmctld daemon.
 .TP
 \fBMinJobAge\fR
 The minimum age of a completed job before its record is purged from 
