--- a/trunk/doc/man/man1/sinfo.1
+++ b/trunk/doc/man/man1/sinfo.1
@@ -115,6 +115,10 @@ Dipaly brief description of commands and options.
 .TP
 \fB\-v\fR , \fB\-\-verbose\fR
 Provide detailed event logging through program execution.
+.TP
+\fB\-V\fR , \fB\-\-version\fR
+Print version information and exit.
+
 .SH "ARGUMENTS"
 .TP
 \fBnodes\fR
