--- a/trunk/doc/man/man1/squeue.1
+++ b/trunk/doc/man/man1/squeue.1
@@ -130,6 +130,9 @@ reported.
 .TP
 \fB\-v\fR, \fB\-\-verbose\fR
 Report details of squeues actions.
+.TP
+\fB\-V\fR , \fB\-\-version\fR
+Print version information and exit.
 
 .SH "ENVIRONMENT VARIABLES"
 .PP
