--- a/trunk/doc/man/man3/slurm_complete_job.3
+++ b/trunk/doc/man/man3/slurm_complete_job.3
@@ -1,9 +1,9 @@
-.TH "Slurm API" "3" "November 2002" "Morris Jette" "Slurm job completion calls"
+.TH "Slurm API" "3" "July 2003" "Morris Jette" "Slurm job completion calls"
 .SH "NAME"
 slurm_complete_job, slurm_complete_job_step \- Slurm job completion calls
 .SH "SYNTAX"
 .LP 
-#include <slurm.h>
+#include <slurm/slurm.h>
 .LP
 int \fBslurm_complete_job\fR (
 .br 
