--- a/trunk/doc/man/man3/slurm_job_step_create.3
+++ b/trunk/doc/man/man3/slurm_job_step_create.3
@@ -1,9 +1,9 @@
-.TH "Slurm API" "3" "November 2002" "Morris Jette" "Slurm job step initiation functions"
+.TH "Slurm API" "3" "July 2003" "Morris Jette" "Slurm job step initiation functions"
 .SH "NAME"
 slurm_job_step_create \- Slurm job step initiation functions
 .SH "SYNTAX"
 .LP 
-#include <slurm.h>
+#include <slurm/slurm.h>
 .LP 
 .LP
 void \fBslurm_free_job_step_create_response_msg\fR (
