--- a/trunk/doc/man/man3/slurm_kill_job.3
+++ b/trunk/doc/man/man3/slurm_kill_job.3
@@ -1,9 +1,9 @@
-.TH "Slurm API" "3" "January 2003" "Morris Jette" "Slurm job signal calls"
+.TH "Slurm API" "3" "July 2003" "Morris Jette" "Slurm job signal calls"
 .SH "NAME"
 slurm_kill_job, slurm_kill_job_step \- Slurm job signal calls
 .SH "SYNTAX"
 .LP 
-#include <slurm.h>
+#include <slurm/slurm.h>
 .LP
 int \fBslurm_kill_job\fR (
 .br 
