--- a/trunk/doc/man/man3/slurm_free_ctl_conf.3
+++ b/trunk/doc/man/man3/slurm_free_ctl_conf.3
@@ -1,4 +1,4 @@
-.TH "Slurm API" "3" "October 2002" "Morris Jette" "Slurm informational calls"
+.TH "Slurm API" "3" "July 2003" "Morris Jette" "Slurm informational calls"
 .SH "NAME"
 slurm_free_ctl_conf, slurm_load_ctl_conf, 
 slurm_print_ctl_conf\- Slurm information reporting functions
@@ -6,7 +6,7 @@ slurm_print_ctl_conf\- Slurm information reporting functions
 .LP 
 #include <stdio.h>
 .br
-#include <slurm.h>
+#include <slurm/slurm.h>
 .LP 
 void \fBslurm_free_ctl_conf\fR (
 .br 
@@ -72,7 +72,9 @@ is set appropriately.
 .LP 
 #include <stdio.h>
 .br
-#include <slurm.h>
+#include <slurm/slurm.h>
+.br
+#include <slurm/slurm_errno.h>
 .LP 
 int main (int argc, char *argv[])
 .br 
