--- a/trunk/doc/man/man3/slurm_free_job_info_msg.3
+++ b/trunk/doc/man/man3/slurm_free_job_info_msg.3
@@ -1,4 +1,4 @@
-.TH "Slurm API" "3" "April 2003" "Morris Jette" "Slurm job information reporting functions"
+.TH "Slurm API" "3" "July 2003" "Morris Jette" "Slurm job information reporting functions"
 .SH "NAME"
 slurm_free_job_info_msg, slurm_load_jobs, 
 slurm_print_job_info, slurm_print_job_info_msg
@@ -7,7 +7,7 @@ slurm_print_job_info, slurm_print_job_info_msg
 .LP 
 #include <stdio.h>
 .br
-#include <slurm.h>
+#include <slurm/slurm.h>
 .br
 #include <sys/types.h>
 .LP
@@ -114,7 +114,9 @@ On success, zero is returned. On error, -1 is returned, and Slurm error code is 
 .LP 
 #include <stdio.h>
 .br
-#include <slurm.h>
+#include <slurm/slurm.h>
+.br
+#include <slurm/slurm_errno.h>
 .br
 #include <sys/types.h>
 .LP 
