--- a/trunk/doc/man/man3/slurm_free_node_info.3
+++ b/trunk/doc/man/man3/slurm_free_node_info.3
@@ -1,4 +1,4 @@
-.TH "Slurm API" "3" "April 2003" "Morris Jette" "Slurm node informational calls"
+.TH "Slurm API" "3" "July 2003" "Morris Jette" "Slurm node informational calls"
 .SH "NAME"
 slurm_free_node_info, slurm_load_node, 
 slurm_print_node_info_msg, slurm_print_node_table
@@ -7,7 +7,7 @@ slurm_print_node_info_msg, slurm_print_node_table
 .LP 
 #include <stdio.h>
 .br
-#include <slurm.h>
+#include <slurm/slurm.h>
 .LP
 void \fBslurm_free_node_info\fR (
 .br 
@@ -100,9 +100,9 @@ is set appropriately.
 .LP 
 #include <stdio.h>
 .br
-#include <slurm.h>
+#include <slurm/slurm.h>
 .br
-#include <slurm_errno.h>
+#include <slurm/slurm_errno.h>
 .LP 
 int main (int argc, char *argv[])
 .br 
