--- a/trunk/doc/man/man3/slurm_free_partition_info.3
+++ b/trunk/doc/man/man3/slurm_free_partition_info.3
@@ -1,4 +1,4 @@
-.TH "Slurm API" "3" "April 2003" "Morris Jette" "Slurm partition information reporting functions"
+.TH "Slurm API" "3" "July 2003" "Morris Jette" "Slurm partition information reporting functions"
 .SH "NAME"
 slurm_free_partition_info, slurm_load_partitions, 
 slurm_print_partition_info, slurm_print_partition_info_msg
@@ -7,7 +7,7 @@ slurm_print_partition_info, slurm_print_partition_info_msg
 .LP
 #include <stdio.h>
 .br
-#include <slurm.h>
+#include <slurm/slurm.h>
 .LP
 void \fBslurm_free_partition_info\fR (
 .br 
@@ -83,7 +83,9 @@ On success, zero is returned. On error, -1 is returned, and Slurm error code is 
 .LP 
 #include <stdio.h>
 .br
-#include <slurm.h>
+#include <slurm/slurm.h>
+.br
+#include <slurm/slurm_errno.h>
 .LP 
 int main (int argc, char *argv[])
 .br 
