--- a/trunk/doc/man/man3/slurm_reconfigure.3
+++ b/trunk/doc/man/man3/slurm_reconfigure.3
@@ -1,4 +1,4 @@
-.TH "Slurm API" "3" "February 2003" "Morris Jette" "Slurm administrative calls"
+.TH "Slurm API" "3" "July 2003" "Morris Jette" "Slurm administrative calls"
 .SH "NAME"
 slurm_init_part_desc_msg,
 slurm_reconfigure, slurm_shutdown, slurm_update_job, 
@@ -6,7 +6,7 @@ slurm_update_node, slurm_update_partition
 \- Slurm administrative functions 
 .SH "SYNTAX"
 .LP 
-#include <slurm.h>
+#include <slurm/slurm.h>
 .LP
 void \fBslurm_init_part_desc_msg\fR (
 .br
@@ -101,7 +101,9 @@ On success, zero is returned. On error, -1 is returned, and the Slurm error code
 .LP 
 #include <stdio.h>
 .br
-#include <slurm.h>
+#include <slurm/slurm.h>
+.br
+#include <slurm/slurm_errno.h>
 .LP 
 int main (int argc, char *argv[])
 .br 
