--- a/trunk/doc/man/man1/srun.1
+++ b/trunk/doc/man/man1/srun.1
@@ -515,8 +515,11 @@ are:
 SLURM_JOBID
 job id of the executing job.
 .TP
-SLURM_RANK
-the MPI rank of the current process
+SLURM_PROCID
+the MPI rank (or relative process ID) of the current process
+.TP
+SLURM_NODEID
+The relative node ID of the current node
 .TP
 SLURM_NPROCS
 total number of processes in the current job
