--- a/trunk/doc/man/man1/sinfo.1
+++ b/trunk/doc/man/man1/sinfo.1
@@ -34,6 +34,10 @@ This is ignored if the \fB\-\-format\fR option is specified.
 .TP
 \fB\-n <nodes>\fR , \fB\-\-nodes=<nodes>\fR
 Print information only about the specified node(s). 
+Multiple nodes may be comma separated or expressed using a 
+node range expression.
+For example "linux[00-07]" would indicate eight nodes, "linux00" 
+through "linux07".
 .TP
 \fB\-N\fR , \fB\-\-Node\fR
 Print information in a node-oriented format.
@@ -50,7 +54,7 @@ If the \fB\-\-long\fR option is specified, the default format is
 If the \fB\-\-Node\fR option is specified, the default format is 
 "%#N %.5D %9P %6t". 
 If the \fB\-\-Node\fR and \fB\-\-long\fR options are both specified, 
-the default format is "%#N %.5D %9P %11T %.4c %.6m %.8d %.6w %8f".
+the default format is "%#N %.5D %9P %11T %.4c %.6m %.8d %.6w %8f %R".
 In the above two formats the value of "#" represents the maximum 
 length of an node list to be printed.
 
@@ -88,6 +92,8 @@ the different node states will be placed on separate lines.
 .br
 \fB%r\fR Only user root may initiate jobs, "yes" or "no"
 .br
+\fB%R\fR The reason a node is unavailable (down, drained, or draining states)
+.br
 \fB%s\fR Maximum job size in nodes
 .br
 \fB%t\fR State of nodes, compact form
@@ -100,16 +106,35 @@ the different node states will be placed on separate lines.
 .br 
 \fB%<Number><*>\fR size of field
 .TP
-\fB\-t <state>\fR , \fB\-\-states=<states>\fR
-List nodes of given states.
-.TP
 \fB\-s\fR , \fB\-\-summarize\fR
 List only a partition state summary with no node state details.
 This is ignored if the \fB\-\-format\fR option is specified.
 .TP
-\fB\-S <sort>\fR , \fB\-\-sort=<sort>\fR
-Sort the records in the order specified. 
-
+\fB\-S <sort_list>\fR , \fB\-\-sort=<sort_list>\fR
+Specification of the order in which records should be reported.
+This uses the same field specifciation as the <output_format>.
+Multiple sorts may be performed by listing multiple sort fields 
+separated by commas.
+The field specifications may be preceeded by "+" or "-" for 
+assending (default) and desending order respectively. 
+For example, a sort value of "P,-m" requests that records be 
+printed in order of increasing partition name and within a 
+partition by decreasing memory size.
+The default value of sort is "P,-t" (increasing partition name 
+then decreasing node state).
+If the "--Node" option is selected, the default sort value is 
+"N" (increasing node name). 
+.TP
+\fB\-t <state>\fR , \fB\-\-states=<states>\fR
+List nodes only having the given state(s).
+Multiple states may be comma separated and the comparison is case 
+insensitive. 
+Possible values include: ALLOC, ALLOCATED, COMP, 
+COMPLETING, DOWN, DRAIN, DRAINED, DRAINING, IDLE, UNK, and UNKNOWN.
+A "*" suffix may be appended to any of these states to search for 
+nodes in the specified state which are not responding. 
+By default nodes in the specified state are reported whether they are 
+responding or not.
 .TP
 \fB\-p <partition>\fR, \fB\-\-partition=<partition>\fR
 Print information only about the specified partition.  
@@ -123,40 +148,6 @@ Provide detailed event logging through program execution.
 \fB\-V\fR , \fB\-\-version\fR
 Print version information and exit.
 
-.SH "ARGUMENTS"
-.TP
-\fBnodes\fR
-The names of one or more comma separated nodes. Names may be specified 
-using node range expressions.
-For example "linux[00-07]" would indicate eight nodes, "linux00" 
-through "linux07".
-.TP
-\fBpartition\fR
-The name of one partition.
-.TP
-\fBsort\fR
-Specification of the order in which records should be reported.
-This uses the same field specifciation as the <output_format>.
-Multiple sorts may be performed by listing multiple sort fields 
-separated by commas.
-The field specifications may be preceeded by "+" or "-" for 
-assending (default) and desending order respectively. 
-For example, a sort value of "P,-m" requests that records by 
-printed in order of increasing partition name and within a 
-partition by decreasing memory size.
-The default value of sort is "P,-t" (increasing partition name 
-then decreasing node state).
-If the "--Node" option is selected, the default sort value is 
-"N" (increasing node name). 
-.TP
-\fBstates\fR
-A comma separated list of valid node state (case insensitive). 
-Possible values include: ALLOC, ALLOCATED, COMP, 
-COMPLETING, DOWN, DRAIN, DRAINED, DRAINING, IDLE, UNK, and UNKNOWN.
-A "*" suffix may be appended to any of these states to search for 
-nodes in the specified state which are not responding. 
-By default nodes in the specified state are reported whether they are 
-responding or not.
 .SH "OUTPUT"
 .TP
 \fBAVAIL\fR
@@ -285,17 +276,31 @@ Report node-oriented information with details and exact matches:
 .br
 > sinfo -Nel
 .br
-NODELIST    NODES PARTITION STATE  CPUS MEMORY TMP_DISK WEIGHT FEATURES
+NODELIST    NODES PARTITION STATE  CPUS MEMORY TMP_DISK WEIGHT FEATURES REASON
 .br
-adev[0-1]       2 debug*    idle      2   3448    38536     16 (null)  
+adev[0-1]       2 debug*    idle      2   3448    38536     16 (null)   (null)
 .br
-adev[2,4-7]     5 debug*    idle      2   3384    38536     16 (null)  
+adev[2,4-7]     5 debug*    idle      2   3384    38536     16 (null)   (null)
 .br
-adev3           1 debug*    idle      2   3394    38536     16 (null)  
+adev3           1 debug*    idle      2   3394    38536     16 (null)   (null)
 .br
-adev[8-9]       2 batch     allocated 2    246    82306     16 (null)  
+adev[8-9]       2 batch     allocated 2    246    82306     16 (null)   (null)
 .br
-adev[10-15]     6 batch     idle      2    246    82306     16 (null)  
+adev[10-15]     6 batch     idle      2    246    82306     16 (null)   (null)
+.br
+
+.br
+Report only down, drained and draining nodes and their reason field:
+.br
+> sinfo --states=down,drained,draining --sort=N --format="%12N %9T %R"
+.br
+NODELIST     STATE     REASON
+.br
+dev[12,18]   DRAINED   power supply, ETA Dec25
+.br
+dev45        DOWN*     (null)
+.br
+dev123       DRAINED   memory, ETA Nov24
 .ec
 
 .SH "COPYING"
