--- a/trunk/doc/man/man1/squeue.1
+++ b/trunk/doc/man/man1/squeue.1
@@ -34,10 +34,10 @@ subject to any constraints specified.
 .TP
 \fB\-o <output_format>\fR, \fB\-\-format=<output_format>\fR
 Specify the information to be displayed.  
-The default format for jobs is "%.7i %9P %8j %8u %2t %.9M %.6D %N".
+The default format for jobs is "%.7i %.9P %.8j %.8u  %.2t %.9M %.6D %N".
 If the \fB\-\-long\fR option is specified, the default job format is 
-"%.7i %9P %8j %8u %8T %.9M %.8l %.6D %N".
-The default format for job steps is "%.10i %9P %8u %.8M %N".
+".7i %.9P %.8j %.8u %.8T %.9M %.9l %.6D %N".
+The default format for job steps is "%10i %.9P %.8u %.9M %N".
 
 The field specifications available include: 
 .br
@@ -183,13 +183,13 @@ Print the job steps in the debug partition sorted by user:
 .br
 # squeue -s -p debug -S u
 .br
-  STEPID    PARTITION   USER     TIME_USED NODELIST
+  STEPID    PARTITION     USER TIME_USED NODELIST
 .br
- 65552.1    debug       alice         0:23 dev[1-4]
+ 65552.1        debug    alice      0:23 dev[1-4]
 .br
- 65562.2    debug       bob           0:18 dev22
+ 65562.2        debug      bob      0:18 dev22
 .br
- 65550.1    debug       candice    1:43:21 dev[6-12]
+ 65550.1        debug  candice   1:43:21 dev[6-12]
 .ec
 
 .eo
@@ -197,11 +197,11 @@ Print information only about jobs 12345 and 12346:
 .br
 # squeue --jobs 12345,12346
 .br
-  JOBID PARTITION NAME USER   ST TIME_USED NODES NODELIST
+ JOBID PARTITION NAME USER ST TIME_USED NODES NODELIST
 .br
-  12345 debug     pwd  david  R       0:21     4 dev[9-12]
+ 12345     debug job1 dave  R      0:21     4 dev[9-12]
 .br
-  12346 debug     pwd  david  PD      0:00     0
+ 12346     debug job2 dave PD      0:00     0
 .ec
 
 .eo
@@ -209,9 +209,9 @@ Print information only about job step 65552.1:
 .br
 # squeue --steps 65552.1
 .br
-  STEPID    PARTITION   USER     TIME_USED NODELIST
+  STEPID    PARTITION    USER    TIME_USED NODELIST
 .br
- 65552.1    debug       alice        12:49 dev[1-4]
+ 65552.1        debug   alice        12:49 dev[1-4]
 .ec
 
 .SH "COPYING"
