Clarify NODES count associated with a pending job may be exceeded when the job is scheduled.

--- a/trunk/doc/man/man1/squeue.1
+++ b/trunk/doc/man/man1/squeue.1
@@ -50,7 +50,9 @@ The field specifications available include:
 \fB%d\fR Minimum size of temporary disk space (in MB) requested by the job
 .br
 \fB%D\fR Number of nodes allocated to the job or the minimum number of nodes 
-required by a pending job
+required by a pending job. The actual number of nodes allocated to a pending 
+job may exceed this number of the job specified a node range count or the 
+cluster contains nodes with varying processor counts.
 .br
 \fB%e\fR Time at which the job ended or is expected to end (based upon its time
 limit)
