--- a/trunk/doc/man/man3/slurm_reconfigure.3
+++ b/trunk/doc/man/man3/slurm_reconfigure.3
@@ -1,4 +1,4 @@
-.TH "Slurm API" "3" "July 2003" "Morris Jette" "Slurm administrative calls"
+.TH "Slurm API" "3" "August 2003" "Morris Jette" "Slurm administrative calls"
 .SH "NAME"
 slurm_init_part_desc_msg,
 slurm_reconfigure, slurm_shutdown, slurm_update_job, 
@@ -93,6 +93,9 @@ On success, zero is returned. On error, -1 is returned, and the Slurm error code
 \fBSLURM_PROTOCOL_VERSION_ERROR\fR Protocol version has changed, re-link your code.
 .LP
 \fBESLURM_INVALID_NODE_NAME\fR the requested node name(s) is/are not valid. 
+.LP
+\fBESLURM_INVALID_NODE_STATE\fR the specified state node state or requested node
+state transition is not valid. 
 .LP
 \fBESLURM_INVALID_PARTITION_NAME\fR the requested partition name is not valid. 
 .LP
