Job TIMELIMIT format changed from hours:minutes to days:hours:minutes:seconds to match that of a job's run time (TIME).

--- a/trunk/doc/man/man1/squeue.1
+++ b/trunk/doc/man/man1/squeue.1
@@ -65,8 +65,8 @@ limit)
 .br
 \fB%j\fR Job name
 .br
-\fB%l\fR Time limit of the job (in hours:minutes). The value may be "NOT_SET" 
-if not yet established or "UNLIMITED" for no limit.
+\fB%l\fR Time limit of the job in days:hours:minutes:seconds. 
+The value may be "NOT_SET" if not yet established or "UNLIMITED" for no limit.
 .br
 \fB%m\fR Minimum size of memory (in MB) requested by the job
 .br
