--- a/trunk/doc/man/man1/srun.1
+++ b/trunk/doc/man/man1/srun.1
@@ -57,7 +57,7 @@ Establish a time limit to terminate the job after the specified number of
 minutes. If the job's time limit exceed's the partition's time limit, the 
 job will be left in a PENDING state. The default value is the partition's 
 time limit. When the time limit is reached, the job's processes are sent 
-SIGXCPU followed by SIGKILL. The interval between signals is specified by 
+SIGTERM followed by SIGKILL. The interval between signals is specified by 
 the SLURM configuration parameter \fBKillWait\fR.
 .TP
 \fB\-\-cddir\fR=\fIpath\fR
